# galaxy-map

./: .clineignore  .clinerules  .editorconfig  .gitignore  CLAUDE.md  README.md  SUBAGENT_ORCHESTRATION.md  TELEGRAM_SETUP.md  docker-compose.yml  galaxy-map-telegram.service  package-lock.json  test_subagent_framework.py
backend/: main.py  requirements.txt  tg_bot.py
backend/api/: __init__.py  schemas.py
backend/api/routes/: __init__.py  messages.py  orchestration.py  projects.py  subagents.py  system.py  tasks.py
backend/config/: app.yaml  statuses.yaml
backend/core/: __init__.py  config.py  exceptions.py
backend/domain/: __init__.py
backend/domain/message/: __init__.py  model.py  repository.py  service.py
backend/domain/orchestration/: service.py
backend/domain/subagent/: __init__.py  model.py  repository.py  service.py
backend/domain/task/: __init__.py  history_model.py  history_repository.py  model.py  repository.py  service.py  validator.py
backend/infrastructure/: __init__.py  db.py
backend/tests/: conftest.py  test_project_plan.py  test_subagent_orchestration.py  test_subagent_tasks.py
frontend/: Dockerfile  component-architecture-plan.md  component-architecture-summary.md  component-hierarchy.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BlockedIndicator.jsx  Column.jsx  CreateTaskModal.jsx  SearchResultsModal.jsx  SpecBadge.jsx  StatusBadge.jsx  TaskCard.jsx  TaskCount.jsx  TaskHistoryTimeline.jsx  helpers.js
mcp-server/: Dockerfile  pyproject.toml  server.py
(+4 files in other folders)
