[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-map-mcp"
version = "0.1.0"
description = "MCP server for the Galaxy Map task tracker"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
galaxy-map-mcp = "server:main"
